# ytplay

./: .gitignore  .pre-commit-config.yaml  MIGRATION.md  README.md  main.py  pyproject.toml  ruff.toml  test.bat
src/: __init__.py  config.py
src/cli/: __init__.py  auth_commands.py  cache_commands.py  commands.py  commands_old.py  common.py  playlist_commands.py
src/core/: __init__.py  auth.py  cache.py  sorting.py  youtube_api.py
src/output/: __init__.py  formatters.py
src/types/: __init__.py  youtube.py
