[project]
name = "sort-playlist-yt"
version = "1.0.0-dev"
description = "A Python CLI tool to interact with the YouTube API and mainly to manage and sort playlists"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "click>=8.2.1",
  "google-api-python-client>=2.178.0",
  "google-auth-httplib2>=0.2.0",
  "google-auth-oauthlib>=1.2.2",
  "tqdm>=4.67.1", # Copyright (c) 2013 noamraph, MIT License
]

[dependency-groups]
dev = [
  "ruff>=0.8.0",
]
